ec2.tf
resource "aws_instance" "web" {
  ami           = "ami-0062e0576ebcaa2a9"
  instance_type = "t2.micro"
  security_groups = [aws_security_group.varshi13.name]
  key_name = aws_key_pair.key_pair.key_name

  tags = {
    Name = "HelloWorld123"
  }
}

resource "aws_security_group" "varshi13" {
  name        = "security group using varshi13"
  description = "security group using varshi13"
  vpc_id      = "vpc-0c438557fe24ea59e"

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
   }

    ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "RDP"
    from_port        = 3389
    to_port          = 3389
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "varshi13"
  }
}
